# raggedy

./: LICENSE  Makefile  README.md  pyproject.toml  skills.md
scripts/: release.sh
src/raggedy/: __init__.py  __main__.py  cli.py  diagram.py  tables.py
tests/: test_cli.py  test_diagram.py  test_tables.py
tests/fixtures/: expected.md  ragged.md
