[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raggedy"
version = "0.1.0"
description = "Fix ragged right edges in LLM-generated ASCII/Unicode box diagrams"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
raggedy = "raggedy.cli:main"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
